<resources>
    <string name="app_name">GameShop</string>
    <string name="first_text">Playstations Store</string>
    <string name="second_text">We sell video games as well as their accessory, we have periodically special offers.</string>
    <string name="text3">Our store located in Saudi Arabic at Riyadh\nDaily working hours from 9am to 10pm  </string>
    <string name="text4">Contact us: ibrahmalhefdhi@gmail.com</string>
</resources>
