<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/main_img"
        android:contentDescription="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/img1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/title_backgraound"
        android:fontFamily="sans-serif-condensed-light"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/first_text"
        android:textColor="@color/title"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <RelativeLayout
        app:layout_constraintBottom_toTopOf="@id/text3"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_above="@id/text3"
        android:layout_marginTop="415dp">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_above="@id/text2"
            android:layout_marginStart="10dp"
            android:src="@drawable/gg"
            android:contentDescription="TODO" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/text2"
            android:layout_marginStart="14dp"
            android:layout_marginBottom="5dp"
            android:layout_toEndOf="@id/img1"
            android:padding="10dp"
            android:layout_alignParentTop="true"
            android:text="@string/second_text"
            android:textColor="@color/text"
            android:textSize="20sp"
            android:textStyle="bold" />
        <TextView
            android:id="@id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:text="@string/text3"
            android:textColor="@color/text"
            android:textSize="15sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="10dp"
        android:textColor="@color/text"
        android:textSize="13sp"
        android:textStyle="bold"
        android:text="@string/text4" />



</androidx.constraintlayout.widget.ConstraintLayout>